--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,6 +21,9 @@
         <input type="text" name="search" placeholder="Search..." required>
         <button type="submit">Search</button>
     </form>
+    <form action="{{ url_for('view') }}" method="POST">
+            <button type="submit">View Favorites</button>
+    </form>
     
     <!-- Block for inserting additional content (used in template inheritance) -->
     {% block content %}{% endblock %}
